--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,36 @@
 {
   "name": "online-compiler-backend",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "在线编译系统后端API服务",
   "main": "dist/server.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc",
+    "build:prod": "tsc --project tsconfig.json",
     "start": "node dist/server.js",
+    "start:prod": "NODE_ENV=production node dist/server.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:prod": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
+    "prisma:seed": "node prisma/seed.js",
     "lint": "eslint . --ext .ts",
-    "format": "prettier --write \"src/**/*.ts\""
+    "lint:fix": "eslint . --ext .ts --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\"",
+    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "admin:create": "node create-admin.js",
+    "admin:reset": "node reset-admin-password.js"
   },
-  "keywords": ["compiler", "online", "docker"],
-  "author": "Dajucoder",
+  "keywords": ["compiler", "online", "docker", "typescript", "express"],
+  "author": "Online Compiler System",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
@@ -31,7 +46,8 @@
     "winston": "^3.11.0",
     "express-rate-limit": "^7.1.5",
     "express-async-errors": "^3.1.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -41,6 +57,7 @@
     "@types/node": "^20.10.5",
     "@types/dockerode": "^3.3.23",
     "@types/uuid": "^9.0.7",
+    "@types/node-cron": "^3.0.11",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "typescript": "^5.3.3",
@@ -48,6 +65,9 @@
     "ts-node": "^10.9.2",
     "eslint": "^8.55.0",
     "prettier": "^3.1.1",
-    "prisma": "^5.7.1"
+    "prisma": "^5.7.1",
+    "jest": "^29.7.0",
+    "@types/jest": "^29.5.8",
+    "ts-jest": "^29.1.1"
   }
 }
