--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -23,6 +23,10 @@ server {
         proxy_cache_bypass $http_upgrade;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        
+        # 确保传递 Authorization header
+        proxy_set_header Authorization $http_authorization;
+        proxy_pass_header Authorization;
     }
 
     # Cache static assets
