--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -41,6 +41,10 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
+        # 确保传递 Authorization header
+        proxy_set_header Authorization $http_authorization;
+        proxy_pass_header Authorization;
+        
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
@@ -56,6 +60,10 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # 确保传递 Authorization header
+        proxy_set_header Authorization $http_authorization;
+        proxy_pass_header Authorization;
         
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
